[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/BaseEnemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/Character.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.78139, 7.36842 )

[sub_resource type="CircleShape2D" id=2]
radius = 294.193

[sub_resource type="CircleShape2D" id=3]
radius = 30.1038

[node name="BaseEnemy" type="KinematicBody2D"]
collision_layer = 31
collision_mask = 31
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="DetectionRadius" type="Area2D" parent="."]
collision_layer = 6
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRadius"]
shape = SubResource( 2 )

[node name="AttackRadius" type="Area2D" parent="."]
collision_layer = 6
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRadius"]
shape = SubResource( 3 )

[connection signal="body_entered" from="DetectionRadius" to="." method="_on_DetectionRadius_body_entered"]
[connection signal="body_exited" from="DetectionRadius" to="." method="_on_DetectionRadius_body_exited"]
[connection signal="body_entered" from="AttackRadius" to="." method="_on_AttackRadius_body_entered"]
[connection signal="body_exited" from="AttackRadius" to="." method="_on_AttackRadius_body_exited"]
